After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 735908 - a11y: Accessibility tree is not being exposed
a11y: Accessibility tree is not being exposed
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
3.13.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2014-09-02 16:56 UTC by Alejandro Piñeiro Iglesias (IRC: infapi00)
Modified: 2014-09-03 16:53 UTC
See Also:
GNOME target: 3.14
GNOME version: ---


Attachments
[clutter-patch] Provide a way to ensure clutter accessibility is enabled (3.33 KB, patch)
2014-09-02 16:57 UTC, Alejandro Piñeiro Iglesias (IRC: infapi00)
committed Details | Review
a11y: initialize clutter accessibility always (1.15 KB, patch)
2014-09-02 16:58 UTC, Alejandro Piñeiro Iglesias (IRC: infapi00)
committed Details | Review

Description Alejandro Piñeiro Iglesias (IRC: infapi00) 2014-09-02 16:56:26 UTC
STEPS TO REPRODUCE IT

Use Orca with gnome-shell 3.13.90 (probably was also happening before).

Orca should expose ("speak") when you interact with gnome-shell (alt+tab switcher, top panel, etc). Nothing happens.

NOTES

This was also happening with gnome-shell 3.12.x but only with wayland. I guess that is normal that now happens in both X and Wayland.

BACKGROUND

This is happening because both clutter_init and gtk_init overrides AtkUtil implementation. Until now past gnome-shell were calling clutter_init last, so the proper AtkUtil was in use. For some reason, now is the opposite. So when the atk-bridge is asked for the root, it tries to return an gtk one.

3.13.X SOLUTION PROPOSED

As we are right now the API freeze, the solution that I will propose will be that cally_accessibility_init will always override AtkUtil implementation, and gnome-shell will always call this method, without relying on the call that clutter does. I will upload the patches in short (both clutter and gnome-shell in the same bug, as are related).

Proper solution would require changes on ATK API, something similar to what I suggested last year in order to solve this problem on Wayland [1].

[1] https://mail.gnome.org/archives/gtk-devel-list/2013-December/msg00007.html
Comment 1 Alejandro Piñeiro Iglesias (IRC: infapi00) 2014-09-02 16:57:37 UTC
Created attachment 285157 [details] [review]
[clutter-patch] Provide a way to ensure clutter accessibility is enabled
Comment 2 Alejandro Piñeiro Iglesias (IRC: infapi00) 2014-09-02 16:58:24 UTC
Created attachment 285158 [details] [review]
a11y: initialize clutter accessibility always
Comment 3 Alejandro Piñeiro Iglesias (IRC: infapi00) 2014-09-02 16:59:22 UTC
Setting as blocker. Right now gnome-shell is totally inaccessible.
Comment 4 Emmanuele Bassi (:ebassi) 2014-09-03 12:34:41 UTC
Review of attachment 285157 [details] [review]:

looks reasonable.
Comment 5 Alejandro Piñeiro Iglesias (IRC: infapi00) 2014-09-03 14:05:39 UTC
Comment on attachment 285157 [details] [review]
[clutter-patch] Provide a way to ensure clutter accessibility is enabled

Committed on branches clutter-1.18 and clutter-1.20
Comment 6 Jasper St. Pierre (not reading bugmail) 2014-09-03 15:50:32 UTC
Review of attachment 285158 [details] [review]:

lg
Comment 7 Alejandro Piñeiro Iglesias (IRC: infapi00) 2014-09-03 16:53:09 UTC
Comment on attachment 285158 [details] [review]
a11y: initialize clutter accessibility always

Patch committed with small changes on the commit message.